Fix style issues in SVG icons and List Component
* fixed quick search style issues
* fixed list table height issue
* remove unused mixin import
* remove unused component imports
* quick search select item not responding issue fix after quick search component update
* implemented list loading
* There's an unwanted gap between the table and the top filters
* button label danger hoverover colour fix
* corrected gutter spaces for dialogs as per OXD guide https://oxd-prod-infinity.orangehrm.com/main-catalog/modals.html
* fixed wrong implementation of minus positioning
* solved button with icon story icon position issue
* fixed calendar style overriding from angular wrapper application issue fix
* changed rules referencing pattern and separated rules.ts
* added telephone number validation regex
* added char length validations

--- a/components/src/core/components/Button/_mixins.scss
+++ b/components/src/core/components/Button/_mixins.scss
@@ -42,11 +42,9 @@
     }
   } @else {
     &:focus {
-      color: $oxd-button-font-color;
       background-color: map-get($oxd-button, 'focus');
     }
     &:hover {
-      color: $oxd-button-font-color;
       background-color: map-get($oxd-button, 'hover');
     }
   }
@@ -106,6 +104,9 @@
 
   &:disabled {
     @include oxd-button-color-ghost(map-get($oxd-button, 'inactive'));
+  }
+  &:hover {
+    @include oxd-button-color-ghost(map-get($oxd-button, 'hover'), true);
   }
 }
 
