--- a/components/src/core/components/List/list.scss
+++ b/components/src/core/components/List/list.scss
@@ -14,7 +14,7 @@
     .list-table-filter {
       padding-bottom: 0;
       :deep(.oxd-divider) {
-        margin-top: 0.25rem;
+        margin-top: 0.55rem;
         margin-bottom: 0;
       }
     }
@@ -54,9 +54,6 @@
 .oxd-button {
   display: flex;
   align-items: center;
-  :deep(.oxd-button-icon) {
-    margin-right: 0.5rem;
-  }
   &:disabled {
     :deep(svg) {
       * {
@@ -82,7 +79,6 @@
         fill: $oxd-feedback-danger-color;
       }
     }
-    color: $oxd-feedback-danger-color;
     &:disabled {
       background-color: $oxd-interface-gray-lighten-1-color !important;
       color: $oxd-white-color !important;
