--- a/components/src/core/components/Sheet/_variables.scss
+++ b/components/src/core/components/Sheet/_variables.scss
@@ -13,5 +13,5 @@ $oxd-sheet-white-shadow-color: $oxd-background-white-shadow-color !default;
 $oxd-sheet-white-color: $oxd-white-color !default;
 
 $oxd-sheet-border-radius: $oxd-border-radius !default;
-$oxd-sheet-padding-vertical: 1.5rem !default;
-$oxd-sheet-padding-horizontal: 1.5rem !default;
+$oxd-sheet-padding-vertical: 1.2rem !default;
+$oxd-sheet-padding-horizontal: 1.2rem !default;
